4.0.0 dev
- Change: Removed all deprecations.
- Change: Removed the PHP 5.x fatal error handler.
- Change: Dropped PHP 5.x support.
- Change: Remove all double Exception / Throwable catching
- Change: Introduced PSR-12 coding style
- Change: Simplified the skin rendering.
- Change: Deprecations for the fallback settings class.
- Change: Introduced strict mode.
- Change: Introduced scalar type hints.
- Change: Introduced method return types.
- Change: Simplified the Model.

3.2.2
- Updated to PHP 7.4
- Bugfix: The process other routing is never called.
- Bugfix: The cookie editor needs to be "initialized" prior usage.
- Bugfix: Wrong meta data, when using dual output.
- Bugfix: Missing css definitions for label.
- Bugfix: Unwanted re-enabling of the source generation.
- Bugfix: Environment check may fail

3.2.1
- Bugfix: Wrong error handler restoration after deleting
  a file.

3.2.0
- Introduce php-mock/php-mock-phpunit.
- Removed the TER-SonarQube findings from the unit tests.
- Added event system to the process classes.
- Clean(er) interface list inside the meta analysis.
- Added current url to the caller finder output.
- Better timer-emergency management on CLI.
- Change: Remove the event prefix and use static::class instead.
- Change: Move cleanup methods to their own class.
- Change: Move the output check methods to an appropriate class.
- Change: Deprecated classes and methods.
- Change: Complete refactor of the rendering mechanism.
- Change: Ported the javascript to type script.
- Bugfix: Missing encoding info in the error handler output.
- Bugfix: Wrong null values for dynamically declared properties.
- Bugfix: Inaccessible array values from array casted objects.
- Bugfix: Wrong variable name retrieval when used inline.
- Bugfix: Wrong return value from the developer handle.

3.1.0
- Use some real autoloading, with a fallback to manually including
  all files.
- Plugins can now register additional skins.